--- a/imports/ui/components/appFooter/appFooter.html
+++ b/imports/ui/components/appFooter/appFooter.html
@@ -1,13 +1,15 @@
 <template name="appFooter">
-    <nav class="navbar navbar-default navbar-fixed-bottom footer">
-        <div class="container-fluid">
-            <ul class="nav navbar-nav navbar-left">
-                <li><a href="#">© {{ currentYear }} - BART Guide.</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                <li class="{{isActivePath 'App.privacy'}}"><a href="{{pathFor 'App.privacy'}}">Privacy</a></li>
-                <li class="{{isActivePath 'App.terms'}}"><a href="{{pathFor 'App.terms'}}">Terms Of Use</a></li>
-            </ul>
-        </div>
-    </nav>
+    <footer>
+        <nav class="navbar navbar-default navbar-fixed-bottom footer">
+            <div class="container-fluid">
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="#">© {{ currentYear }} - BART Guide.</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="{{isActivePath 'App.privacy'}}"><a href="{{pathFor 'App.privacy'}}">Privacy</a></li>
+                    <li class="{{isActivePath 'App.terms'}}"><a href="{{pathFor 'App.terms'}}">Terms Of Use</a></li>
+                </ul>
+            </div>
+        </nav>
+    </footer>
 </template>
