--- a/imports/ui/components/appNav/appNav.html
+++ b/imports/ui/components/appNav/appNav.html
@@ -20,6 +20,21 @@
             <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
                 <span class="sr-only">Toggle navigation</span>
             </a>
+            <div class="container-fluid">
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="#">
+                                {{#if visitCount}}
+                                    Welcome back ! Visit Count: <strong class="badge">{{visitCount}}</strong>
+                                {{else}}
+                                    Welcome !
+                                {{/if}}
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
 </template>
