add trips page UI

--- a/imports/ui/components/appSidebar/appSidebar.html
+++ b/imports/ui/components/appSidebar/appSidebar.html
@@ -8,6 +8,9 @@
             <li class="{{isActiveRoute 'App.stations'}}">
                 <a href="{{pathFor 'App.stations'}}"> <i class="fa fa-subway"></i> <span>Stations</span> </a>
             </li>
+            <li class="{{isActiveRoute 'App.trips'}}">
+                <a href="{{pathFor 'App.trips'}}"> <i class="fa fa-plane"></i> <span>Trips</span> </a>
+            </li>
         </ul>
     </aside>
 </template>
