add schedule trip api and real time estimate api

--- a/imports/ui/stylesheets/custom-bootstrap-variables.less
+++ b/imports/ui/stylesheets/custom-bootstrap-variables.less
@@ -32,3 +32,5 @@
 
 @list-group-hover-bg: lighten(#551A8B, 60%);
 @list-group-link-color: @brand-primary;
+
+@input-bg-disabled: lighten(#551A8B, 60%);
