add trips ui and apis

--- a/imports/ui/layouts/body/body.html
+++ b/imports/ui/layouts/body/body.html
@@ -2,7 +2,7 @@
   {{> appNav}}
   {{> appSidebar}}
   <div class="content-wrapper">
-    <section class="content">
+    <section class="content container-fluid">
       {{> Template.dynamic template=main}}
     </section>
   </div>
