--- a/imports/ui/stylesheets/misc.less
+++ b/imports/ui/stylesheets/misc.less
@@ -3,6 +3,10 @@ p.text-info.bg-info {
   padding: 15px;
 }
 
+.fa.bg-info, .trasfercode {
+  padding: 2.5px;
+}
+
 button[disabled] {
   color: @brand-primary;
 }
