--- a/imports/ui/components/appFooter/appFooter.html
+++ b/imports/ui/components/appFooter/appFooter.html
@@ -3,7 +3,7 @@
         <nav class="navbar navbar-default navbar-fixed-bottom footer">
             <div class="container-fluid">
                 <ul class="nav navbar-nav navbar-left">
-                    <li><a href="#">© {{ currentYear }} - BART Guide.</a></li>
+                    <li><a href="#">© {{ currentYear }} - BART Guide</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="{{isActivePath 'App.privacy'}}"><a href="{{pathFor 'App.privacy'}}">Privacy</a></li>
