--- a/imports/ui/stylesheets/misc.less
+++ b/imports/ui/stylesheets/misc.less
@@ -10,3 +10,7 @@ p.text-info.bg-info {
 button[disabled] {
   color: @brand-primary;
 }
+
+.real-time-jumbotron {
+  background-color: darken(@jumbotron-bg, 20%);
+}
