--- a/imports/ui/components/appFooter/appFooter.html
+++ b/imports/ui/components/appFooter/appFooter.html
@@ -1,6 +1,6 @@
 <template name="appFooter">
     <footer>
-        <nav class="navbar navbar-default navbar-fixed-bottom footer">
+        <nav class="navbar navbar-default footer">
             <div class="container-fluid">
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="#">© {{ currentYear }} - BART Guide</a></li>
